src/objects/Investment__c.object
<CustomObject>
    <fields>
        <fullName>Cost_of_investment__c</fullName>
        <label>Cost of investment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fair_value_of_investment__c</fullName>
        <label>Fair value of investment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_IRR_on_unrealised_investments__c</fullName>
        <label>Gross IRR on unrealised investments</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest_and_dividends_since_inception__c</fullName>
        <label>Interest and dividends since inception</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Investment_stage__c</fullName>
        <label>Investment stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Investment_Stage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Portfolio_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Investments</relationshipLabel>
        <relationshipName>Investments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Investment</label>
    <nameField>
        <label>Investment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>